Add images and other base styles

--- a/src/scss/1-helpers/_variable.scss
+++ b/src/scss/1-helpers/_variable.scss
@@ -17,6 +17,7 @@ $content-font-size:27px;
 
 
 $font-content:$black;
+$lang-selector-bg: $peach-vibe;
 $bg-1:$peach;
 $bg-2:$dusty-green;
 $bg-3:$dusty-lilac;
