--- a/src/scss/2-base/_typography.scss
+++ b/src/scss/2-base/_typography.scss
@@ -1,15 +1,15 @@
 @font-face {
     font-family: "GalaxieCopernicus";
-    src: url(../../../dist/fonts/GalaxieCopernicus-Book.otf);
+    src: url(../fonts/GalaxieCopernicus-Book.otf);
 }
 
 @font-face {
     font-family: "Inter-VariableFont";
-    src: url(../../../dist/fonts/Inter-VariableFont_slnt\,wght.ttf);
+    src: url(../fonts/Inter-VariableFont_slnt\,wght.ttf);
 }
 
 
 @font-face {
     font-family:"SunsetGothicBold" ;
-    src: url(../../../dist/fonts/sunset-gothic-bold-pro.eot);
+    src: url(../fonts/sunset-gothic-bold-pro.eot);
 }
