--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,5 @@
 @import './0-plugins/0-plugins';
 @import './1-helpers/1-helpers';
 @import './2-base/2-base';
-// @import './bootstrap/bootstrap';
+@import './3-layout/3-layout';
 // @import './bootstrap/bootstrap';
