--- a/src/scss/2-base/_typography.scss
+++ b/src/scss/2-base/_typography.scss
@@ -11,5 +11,14 @@
 
 @font-face {
     font-family:"SunsetGothicBold" ;
+    font-weight: normal;
+    font-style: normal;
     src: url(../fonts/sunset-gothic-bold-pro.eot);
+    src: url(../fonts/) format("embedded-opentype"),
+     url(../fonts/sunset-gothic-bold-pro.woff)
+     format("woff"),
+     url(../fonts/sunset-gothic-bold-pro.woff2)
+     format("woff2"),
+      url(../fonts/sunset-gothic-bold-pro.ttf) format("truetype");
+      
 }
