Add language selector styles

--- a/src/scss/1-helpers/_variable.scss
+++ b/src/scss/1-helpers/_variable.scss
@@ -13,10 +13,11 @@ $card-title-font-size:28px;
 $sub-head-font-size:47px;
 $content-font-size:27px;
 
-// FONT SIZE VARIABLE
+// FONT SIZE VARIABLES
 
 
-$font-content:$black;
+$font-content-color:$black;
+$font-content-lightcolor:$off-black;
 $lang-selector-bg: $peach-vibe;
 $bg-1:$peach;
 $bg-2:$dusty-green;
