--- a/src/scss/2-base/_common.scss
+++ b/src/scss/2-base/_common.scss
@@ -2,3 +2,20 @@ body{
     font-family: "GalaxieCopernicus";
     font-size: $content-font-size;
 }
+p{
+    margin: 0;
+}
+
+a{
+    color: $font-content-color;
+    &:hover{
+        text-decoration: none;
+        
+    }
+}
+
+h1.title{
+    font-size: 64px;
+    font-family:"SunsetGothicBold" ;
+}
+    
