--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,4 +2,4 @@
 @import './1-helpers/1-helpers';
 @import './2-base/2-base';
 @import './3-layout/3-layout';
-// @import './bootstrap/bootstrap';
+@import './4-modules/home';
