Add seperator styles

--- a/src/scss/1-helpers/_variable.scss
+++ b/src/scss/1-helpers/_variable.scss
@@ -7,8 +7,8 @@ $off-black:#474952;
 
 // COLOR VARIABLES
 
-$hero-font-size:84px;
-$block-title-font-size: 63px;
+$hero-font-size:64px;
+$block-title-font-size: 52px;
 $card-title-font-size:28px;
 $sub-head-font-size:47px;
 $content-font-size:16px;
@@ -18,10 +18,15 @@ $content-font-size:16px;
 
 $font-content-color:$black;
 $font-content-lightcolor:$off-black;
+$link-color: $black ;
+$link-color-hover:$peach;
+$button-bg:$peach;
+$button-bg-hover: $black;
 $lang-selector-bg: $peach-vibe;
 $bg-1:$peach;
 $bg-2:$dusty-green;
 $bg-3:$dusty-lilac;
+
 
 
 // DERIVED VARIABLES
