--- a/src/scss/2-base/_typography.scss
+++ b/src/scss/2-base/_typography.scss
@@ -1,24 +1,20 @@
 @font-face {
-    font-family: "GalaxieCopernicus";
-    src: url(../fonts/GalaxieCopernicus-Book.otf);
+  font-family: "GalaxieCopernicus";
+  src: url(../fonts/GalaxieCopernicus-Book.otf);
 }
 
 @font-face {
-    font-family: "Inter-VariableFont";
-    src: url(../fonts/Inter-VariableFont_slnt\,wght.ttf);
+  font-family: "Inter-VariableFont";
+  src: url(../fonts/Inter-VariableFont_slnt\wght.ttf);
 }
 
-
 @font-face {
-    font-family:"SunsetGothicBold" ;
-    font-weight: normal;
-    font-style: normal;
-    src: url(../fonts/sunset-gothic-bold-pro.eot);
-    src: url(../fonts/) format("embedded-opentype"),
-     url(../fonts/sunset-gothic-bold-pro.woff)
-     format("woff"),
-     url(../fonts/sunset-gothic-bold-pro.woff2)
-     format("woff2"),
-      url(../fonts/sunset-gothic-bold-pro.ttf) format("truetype");
-      
+  font-family: "SunsetGothicBold";
+  font-weight: normal;
+  font-style: normal;
+  src: url(../fonts/sunset-gothic-bold-pro.eot);
+  src: url(../fonts/) format("embedded-opentype"),
+    url(../fonts/sunset-gothic-bold-pro.woff) format("woff"),
+    url(../fonts/sunset-gothic-bold-pro.woff2) format("woff2"),
+    url(../fonts/sunset-gothic-bold-pro.ttf) format("truetype");
 }
