--- a/src/scss/1-helpers/_variable.scss
+++ b/src/scss/1-helpers/_variable.scss
@@ -9,8 +9,8 @@ $off-black:#474952;
 
 $hero-font-size:64px;
 $block-title-font-size: 52px;
-$card-title-font-size:28px;
-$sub-head-font-size:47px;
+$card-title-font-size:24px;
+$sub-title-font-size:47px;
 $content-font-size:16px;
 
 // FONT SIZE VARIABLES
@@ -26,6 +26,7 @@ $lang-selector-bg: $peach-vibe;
 $bg-1:$peach;
 $bg-2:$dusty-green;
 $bg-3:$dusty-lilac;
+$card-bg: $peach;
 
 
 
