Add card hover styles

--- a/src/scss/1-helpers/_variable.scss
+++ b/src/scss/1-helpers/_variable.scss
@@ -9,7 +9,7 @@ $off-black:#474952;
 
 $hero-font-size:64px;
 $block-title-font-size: 52px;
-$card-title-font-size:24px;
+$card-title-font-size:28px;
 $sub-title-font-size:47px;
 $content-font-size:16px;
 
@@ -27,6 +27,8 @@ $bg-1:$peach;
 $bg-2:$dusty-green;
 $bg-3:$dusty-lilac;
 $card-bg: $peach;
+$card-bg-hover: $black;
+$card-text-hover: $peach;
 
 
 
