Add Learn block to page
learn block elements generated along with slick slider for cards.

--- a/src/scss/0-plugins/slick/_slick.scss
+++ b/src/scss/0-plugins/slick/_slick.scss
@@ -117,3 +117,10 @@
 .slick-arrow.slick-hidden {
     display: none;
 }
+
+
+// CUSTOM SLICK SCSS
+
+.slick-initialized .slick-slide {
+    display: inline-flex;
+}
