--- a/src/scss/4-modules/_card.scss
+++ b/src/scss/4-modules/_card.scss
@@ -4,6 +4,7 @@
         max-height: 404px;
         height: 404px;
         max-width: 360px;
+        margin: 0 30px;
         transition: ease-in-out 0.6s;
         &:hover{
             background-color: $card-bg-hover;
