--- a/src/scss/4-modules/_card.scss
+++ b/src/scss/4-modules/_card.scss
@@ -1,21 +1,73 @@
-.card{
-        border-radius: 0;
-        background-color: $card-bg;
-        max-height: 404px;
-        height: 404px;
-        max-width: 360px;
-        margin: 0 30px;
-        transition: ease-in-out 0.6s;
-        &:hover{
-            background-color: $card-bg-hover;
-            color: $card-text-hover;
-        }
-
-    &-title{
-        font-family: "SunsetGothicBold";
-        font-size: $card-title-font-size;
-        line-height: 25px;
-        text-transform: uppercase;
-       
+.card {
+  border-radius: 0;
+  background-color: $card-bg;
+  max-height: 404px;
+  height: 404px;
+  max-width: 360px;
+  margin: 0 30px;
+  transition: ease-in-out 0.6s;
+  border: none;
+  &:hover {
+    background-color: $card-bg-hover;
+    color: $card-text-hover;
+    cursor: pointer;
+  }
+  &-title {
+    font-family: "SunsetGothicBold";
+    font-size: $card-title-font-size;
+    line-height: 25px;
+    text-transform: uppercase;
+  }
+  &-img {
+    &--border {
+      border: 7px solid $black;
+      transition: ease-in-out .3s;
+      &:hover {
+        border-color: $peach;
+      }
     }
+  }
+  
+
+  &--bgnone {
+    background-color: transparent;
+    margin: 0;
+    &:hover {
+      background-color: transparent;
+      color: $black;
+    }
+    .card-body{
+        padding: 10px 0;
+    }
+  }
+  &-tag{
+      background-color: $card-bg;
+      font-size: 14px;
+      padding: 2px 5px;
+      margin-right: 5px;
+      text-transform: uppercase;
+  }
+  &-update{
+    text-transform: uppercase;
+    font-size: 14px;
+
+  }
+  &--imgnone{
+      border-top: 8px solid $black;
+      &:hover{
+        border-top: 8px solid $peach;
+      }
+  }
+
+}
+
+h4.card-text{
+    font-size: 32px;
+    line-height: 44px;
+   
+}
+
+h5.card-text{
+    font-size: 22px;
+    margin: 15px 0;
 }
