--- a/src/scss/4-modules/_home.scss
+++ b/src/scss/4-modules/_home.scss
@@ -8,6 +8,17 @@
     &__desc{
         padding: 30px 0;
     }
+
+    &__item{
+        display: inline-block;
+        color: $off-black;
+        opacity: 0.2;
+        padding: 0 10px;
+        &--active{
+            opacity: 1;
+        }
+
+    }
 }
 
 .content-section{
