--- a/src/scss/2-base/_common.scss
+++ b/src/scss/2-base/_common.scss
@@ -93,14 +93,18 @@ h2.title {
         display: none;
     }
 
-    
+    body {
+        font-size: 27px;
+      }
 
     h1.title {
         line-height: 55px;
+        font-size: 64px;
       }
       
       h2.title {
         line-height: 48px;
+        font-size: 52px;
       }
 
       .section-padding {
@@ -110,6 +114,7 @@ h2.title {
       .blockcard {
         &__title {
           margin: 48px 0;
+          font-size: 47px;
         }
       }
 
