--- a/src/scss/4-modules/_card.scss
+++ b/src/scss/4-modules/_card.scss
@@ -34,11 +34,13 @@
     &__wrapper {
       position: relative;
     }
+
     &__play {
       position: absolute;
-      bottom: 30px;
-      left: 30px;
-    }
+      bottom: 30%;
+      left: 40%;
+  }
+   
   }
 
   &--bgnone {
@@ -53,6 +55,7 @@
       padding: 10px 0;
     }
   }
+
   &-tag {
     background-color: $card-bg;
     font-size: 14px;
@@ -110,11 +113,38 @@ h5.card-text {
   &-update {
     font-size: 10px;
   }
+
+  &--bgnone {
+    background-color: transparent;
+    margin: 0;
+    height: auto;
+    &:hover {
+      background-color: transparent;
+      color: $black;
+    }
+    .card-body {
+      padding: 10px 0;
+    }
+  }
+  &--imgnone {
+    border-top: 8px solid $black;
+    &:hover {
+      border-top: 8px solid $peach;
+    }
+  }
+
+  &-img{
+    &__play {
+      position: absolute;
+      bottom: 30px;
+      left: 30px;
+    }
+  }
   }
 
   h4.card-text {
     font-size: 32px;
-    line-height: 25px;
+    line-height: 44px;
   }
   
   h5.card-text {
