--- a/src/scss/4-modules/_text-content.scss
+++ b/src/scss/4-modules/_text-content.scss
@@ -1,6 +1,16 @@
 .text-content{
+    padding: 10px 0;
+    &__desc{
+        padding: 20px 0;
+    }
+}
+
+
+@media screen and (min-width:1074px){
+.text-content{
     padding: 40px 0;
     &__desc{
         padding: 30px 0;
     }
+}
 }
