--- a/src/scss/3-layout/_nav.scss
+++ b/src/scss/3-layout/_nav.scss
@@ -9,13 +9,13 @@
   &__item {
     display: inline-block;
     padding: 0 20px;
-    line-height: 39px;
+    line-height: 95%;
     vertical-align: top;
     &--register {
       font-family: "SunsetGothicBold";
       float: right;
       font-size: 14px;
-      line-height: 20px;
+      line-height: 95%;
     }
   }
 
