--- a/src/scss/4-modules/_card.scss
+++ b/src/scss/4-modules/_card.scss
@@ -4,7 +4,7 @@
   height: 230px;
   max-width: 360px;
   margin: 0 10px;
-  transition: ease-in-out 0.6s;
+  transition: $stdrd-transition;
   border: none;
   &:hover {
     background-color: $card-bg-hover;
@@ -19,13 +19,13 @@
   &-title {
     font-family: "SunsetGothicBold";
     font-size: $card-title-font-size;
-    line-height: 16px;
+    line-height: 98%;
     text-transform: uppercase;
   }
   &-img {
     &--border {
       border: 7px solid $black;
-      transition: ease-in-out 0.3s;
+      transition: $stdrd-transition;
       &:hover {
         border-color: $peach;
       }
@@ -77,7 +77,7 @@
 
 h4.card-text {
   font-size: $card-noimg-tile;
-  line-height: 28px;
+  line-height: 120%;
 }
 
 h5.card-text {
@@ -94,11 +94,10 @@ h5.card-text {
   height: 404px;
   max-width: 360px;
   margin: 0 30px;
-  transition: ease-in-out 0.6s;
+  transition: $stdrd-transition;
   border: none;
 
   &-title {
-    line-height: 25px;
     font-size: 28px;
   }
 
@@ -144,7 +143,6 @@ h5.card-text {
 
   h4.card-text {
     font-size: 32px;
-    line-height: 44px;
   }
   
   h5.card-text {
