--- a/src/scss/2-base/_common.scss
+++ b/src/scss/2-base/_common.scss
@@ -11,8 +11,10 @@ a {
   color: $font-content-color;
   &:hover {
     text-decoration: none;
+    color: $font-content-color;
   }
 }
+
 ul {
   padding: 0;
   list-style: none;
