--- a/src/scss/3-layout/_nav.scss
+++ b/src/scss/3-layout/_nav.scss
@@ -1,6 +1,9 @@
 .navbar {
-  background-color: $bg-1;
+  background-color: $peach-vibe;
   padding: 20px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 99;
   &__list {
     margin: 0;
     padding: 0;
@@ -20,7 +23,50 @@
   }
 
   &__logo {
-    padding-right: 30px;
+    width: 90px;
+  }
+  &-nav {
+    display: block;
+    height: 83.5vh;
+  }
+}
+
+.spnav {
+  &__list {
+    padding: 40px 0;
+  }
+
+  &__item {
+    border-top: 1px solid;
+  }
+
+  &__inrlist {
+    columns: 2;
+
+    &__item {
+      font-size: 14px;
+      font-family: "SunsetGothicBold";
+      text-transform: uppercase;
+      line-height: 90%;
+      padding-bottom: 25px;
+    }
+  }
+  .link {
+    font-size: 32px;
+    padding: 20px 10px;
+    &__button {
+      color: $link-color;
+      background: $peach-vibe;
+    }
+  }
+
+  .langselector {
+    background: $peach;
+    margin: 0 -15px -15px -15px;
+    &__wrapper {
+      margin-right: auto;
+      margin-left: 0;
+    }
   }
 }
 
@@ -47,6 +93,9 @@
 
 @media all and (min-width: 992px) {
   .navbar {
+    position: relative;
+    width: 100%;
+    z-index: 99;
     .nav-item {
       .dropdown-menu {
         display: none;
@@ -60,6 +109,15 @@
           margin-top: -5px;
         }
       }
+    }
+
+    &__logo {
+      padding-right: 30px;
+      width: 100%;
+    }
+    &-nav {
+      display: block;
+      height: auto;
     }
   }
 
@@ -79,7 +137,7 @@
       text-transform: uppercase;
       opacity: 0.5;
 
-      &:hover{
+      &:hover {
         opacity: 1;
       }
       &--active {
@@ -87,7 +145,7 @@
       }
     }
 
-    &__list{
+    &__list {
       border-right: solid 1px;
     }
   }
@@ -103,4 +161,179 @@
     padding: 3em;
     margin: -2.6em;
   }
+}
+
+/* Icon 1 */
+
+.animated-icon1,
+.animated-icon2,
+.animated-icon3 {
+  width: 30px;
+  height: 20px;
+  position: relative;
+  margin: 0px;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
+  -o-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  cursor: pointer;
+}
+
+.animated-icon1 span,
+.animated-icon2 span,
+.animated-icon3 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
+  -o-transition: 0.25s ease-in-out;
+  transition: 0.25s ease-in-out;
+}
+
+.animated-icon1 span {
+  background: #e65100;
+}
+
+.animated-icon2 span {
+  background: $black;
+}
+
+.animated-icon3 span {
+  background: #f3e5f5;
+}
+
+.animated-icon1 span:nth-child(1) {
+  top: 0px;
+}
+
+.animated-icon1 span:nth-child(2) {
+  top: 10px;
+}
+
+.animated-icon1 span:nth-child(3) {
+  top: 20px;
+}
+
+.animated-icon1.open span:nth-child(1) {
+  top: 11px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+.animated-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+.animated-icon1.open span:nth-child(3) {
+  top: 11px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+/* Icon 3*/
+
+.animated-icon2 span:nth-child(1) {
+  top: 0px;
+}
+
+.animated-icon2 span:nth-child(2),
+.animated-icon2 span:nth-child(3) {
+  top: 10px;
+}
+
+.animated-icon2 span:nth-child(4) {
+  top: 20px;
+}
+
+.animated-icon2.open span:nth-child(1) {
+  top: 11px;
+  width: 0%;
+  left: 50%;
+}
+
+.animated-icon2.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.animated-icon2.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+.animated-icon2.open span:nth-child(4) {
+  top: 11px;
+  width: 0%;
+  left: 50%;
+}
+
+/* Icon 4 */
+
+.animated-icon3 span:nth-child(1) {
+  top: 0px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.animated-icon3 span:nth-child(2) {
+  top: 10px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.animated-icon3 span:nth-child(3) {
+  top: 20px;
+  -webkit-transform-origin: left center;
+  -moz-transform-origin: left center;
+  -o-transform-origin: left center;
+  transform-origin: left center;
+}
+
+.animated-icon3.open span:nth-child(1) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 0px;
+  left: 8px;
+}
+
+.animated-icon3.open span:nth-child(2) {
+  width: 0%;
+  opacity: 0;
+}
+
+.animated-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 21px;
+  left: 8px;
 }
