Add page transition jscript

--- a/src/scss/1-helpers/_variable.scss
+++ b/src/scss/1-helpers/_variable.scss
@@ -14,6 +14,7 @@ $card-noimg-tile:24px;
 $sub-title-font-size: 24px;
 $content-font-size: 16px;
 
+
 // FONT SIZE VARIABLES
 
 $font-content-color: $black;
@@ -33,6 +34,6 @@ $card-text-hover: $peach;
 // DERIVED VARIABLES
 
 
-$stdrd-transition: ease-in-out, 0.2s;
+$stdrd-transition: ease-in-out 0.2s;
 
 // TRANSITION VARIABLES
