--- a/src/scss/0-plugins/slick/_slick.scss
+++ b/src/scss/0-plugins/slick/_slick.scss
@@ -121,6 +121,6 @@
 
 // CUSTOM SLICK SCSS
 
-.slick-initialized .slick-slide {
-    display: inline-flex;
-}
+// .slick-initialized .slick-slide {
+//     display: inline-flex;
+// }
