--- a/src/scss/4-modules/_home.scss
+++ b/src/scss/4-modules/_home.scss
@@ -1,49 +1,53 @@
-.hero{
-    background: $bg-1;
-    padding: 60px 0;
+.hero {
+  background: $bg-1;
+  padding: 60px 0;
 
-    &__textcontent{
-        padding: 40px 0;
-    }
-    &__desc{
-        padding: 30px 0;
-    }
+  &__textcontent {
+    padding: 40px 0;
+  }
+  &__desc {
+    padding: 30px 0;
+  }
 
-    &__item{
-        display: inline-block;
-        color: $off-black;
-        opacity: 0.2;
-        padding: 0 10px;
-        &--active{
-            opacity: 1;
-        }
-
+  &__item {
+    display: inline-block;
+    color: $off-black;
+    opacity: 0.2;
+    padding: 0 10px;
+    &--active {
+      opacity: 1;
     }
+  }
+
+  &__textcontent{
+    .slick-initialized .slick-slide {
+        display: block;
+      }
+  }
+
+  
 }
 
-.content-section{
-    background: $bg-2;
+.content-section {
+  background: $bg-2;
 
-    &__wrapper{
-        margin-top: -5px;
-    }
+  &__wrapper {
+    margin-top: -5px;
+  }
 
-    &--pnkbg{
-        background: $bg-3;
-    }
+  &--pnkbg {
+    background: $bg-3;
+  }
 }
-
 
 @media screen and (min-width: 1074px) {
+  .hero {
+    padding: 120px 0;
+  }
 
-    .hero{
-        padding: 120px 0;
+  .content-section {
+    &__wrapper {
+      margin-top: -60px;
     }
-
-    .content-section{
-    
-        &__wrapper{
-            margin-top: -60px;
-        }
-    }
+  }
 }
