Reconfigure slick dots for hero

--- a/src/scss/0-plugins/slick/_slick.scss
+++ b/src/scss/0-plugins/slick/_slick.scss
@@ -120,7 +120,8 @@
 
 
 // CUSTOM SLICK SCSS
-
-// .slick-initialized .slick-slide {
-//     display: inline-flex;
-// }
+.blockcard__wrapper{
+.slick-initialized .slick-slide {
+    display: inline-flex;
+}
+}
