--- a/src/scss/3-layout/_nav.scss
+++ b/src/scss/3-layout/_nav.scss
@@ -1,5 +1,5 @@
 .navbar {
-  padding: 20px 0;
+  padding:20px 0;
   position: fixed;
   width: 100%;
   z-index: 99;
@@ -11,7 +11,7 @@
   }
   &__item {
     display: inline-block;
-    padding: 0 20px;
+    padding: 14px 20px;
     line-height: 95%;
     vertical-align: top;
     &--register {
@@ -38,7 +38,6 @@
   top: 0;
   background: $peach-vibe;
   transition: 0.2s ease-in-out;
-  padding: 30px 0;
 }
 
 .spnav {
@@ -103,10 +102,12 @@
 
 @media all and (min-width: 992px) {
   .navbar {
+    padding: 0;
     position: relative;
     width: 100%;
     z-index: 99;
     .nav-item {
+      padding: 24px 20px;
       .dropdown-menu {
         display: none;
       }
