--- a/src/scss/4-modules/_home.scss
+++ b/src/scss/4-modules/_home.scss
@@ -3,7 +3,7 @@
   padding: 60px 0;
 
   &__textcontent {
-    padding: 40px 0;
+        padding: 40px 0 0 0;
   }
   &__desc {
     padding: 30px 0;
@@ -24,8 +24,6 @@
         display: block;
       }
   }
-
-  
 }
 
 .content-section {
