--- a/src/scss/3-layout/_nav.scss
+++ b/src/scss/3-layout/_nav.scss
@@ -79,6 +79,12 @@
   }
 }
 
+.nav-link{
+  &:hover{
+    border-bottom: 1px solid $black;
+  }
+}
+
 @media screen and (min-width: 1074px) {
   #navbar {
     // background-color: $peach-vibe;
